feat: add list project, filter catalog, cursor pagination, add some new project column
