# main/docs/swagger.json
@@ -5,6 +5,52 @@
     },
     "paths": {
         "/projects": {
+            "get": {
+                "description": "Retrieve project details with cursor-based pagination and optional category filter",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Projects"
+                ],
+                "summary": "Get all projects with pagination and category filter",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Project Category Name",
+                        "name": "category",
+                        "in": "query"
+                    },
+                    {
+                        "type": "integer",
+                        "description": "Cursor for pagination",
+                        "name": "cursor",
+                        "in": "query"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/model.ProjectResponse"
+                            }
+                        }
+                    },
+                    "400": {
+                        "description": "Invalid parameters",
+                        "schema": {}
+                    },
+                    "404": {
+                        "description": "Projects not found",
+                        "schema": {}
+                    }
+                }
+            },
             "post": {
                 "description": "Create a new project with associated tags and images using form-data",
                 "consumes": [
@@ -22,6 +68,13 @@
                         "type": "string",
                         "description": "Project Name",
                         "name": "name",
+                        "in": "formData",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "Project Overview",
+                        "name": "overview",
                         "in": "formData",
                         "required": true
                     },
@@ -50,6 +103,16 @@
                             "type": "string"
                         },
                         "collectionFormat": "multi",
+                        "description": "Category item",
+                        "name": "categories[]",
+                        "in": "formData"
+                    },
+                    {
+                        "type": "array",
+                        "items": {
+                            "type": "string"
+                        },
+                        "collectionFormat": "multi",
                         "description": "Tag item",
                         "name": "tags[]",
                         "in": "formData"
@@ -61,7 +124,7 @@
                         },
                         "collectionFormat": "multi",
                         "description": "Images",
-                        "name": "images",
+                        "name": "images[]",
                         "in": "formData"
                     }
                 ],
@@ -74,15 +137,11 @@
                     },
                     "400": {
                         "description": "Invalid form data",
-                        "schema": {
-                            "type": "string"
-                        }
+                        "schema": {}
                     },
                     "500": {
                         "description": "Failed to create project",
-                        "schema": {
-                            "type": "string"
-                        }
+                        "schema": {}
                     }
                 }
             }
@@ -118,21 +177,34 @@
                     },
                     "400": {
                         "description": "Invalid project ID",
-                        "schema": {
-                            "type": "string"
-                        }
+                        "schema": {}
                     },
                     "404": {
                         "description": "Project not found",
-                        "schema": {
-                            "type": "string"
-                        }
+                        "schema": {}
                     }
                 }
             }
         }
     },
     "definitions": {
+        "entity.Category": {
+            "type": "object",
+            "properties": {
+                "category": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "integer"
+                },
+                "projects": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/entity.Project"
+                    }
+                }
+            }
+        },
         "entity.Image": {
             "type": "object",
             "properties": {
@@ -150,6 +222,12 @@
         "entity.Project": {
             "type": "object",
             "properties": {
+                "categories": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/entity.Category"
+                    }
+                },
                 "description": {
                     "type": "string"
                 },
@@ -166,6 +244,9 @@
                     "type": "string"
                 },
                 "note": {
+                    "type": "string"
+                },
+                "overview": {
                     "type": "string"
                 },
                 "tags": {
@@ -189,7 +270,6 @@
                     "type": "string"
                 },
                 "projects": {
-                    "description": "ProjectIDs akan dikelola oleh GORM sebagai bagian dari relasi many-to-many",
                     "type": "array",
                     "items": {
                         "$ref": "#/definitions/entity.Project"
@@ -200,6 +280,12 @@
         "model.ProjectResponse": {
             "type": "object",
             "properties": {
+                "categories": {
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    }
+                },
                 "description": {
                     "type": "string"
                 },
@@ -213,6 +299,9 @@
                     "type": "string"
                 },
                 "note": {
+                    "type": "string"
+                },
+                "overview": {
                     "type": "string"
                 },
                 "tags": {
